--- a/app/views/forms.html
+++ b/app/views/forms.html
@@ -17,11 +17,19 @@
         Forms
       </h1>
 
-      <div class="search">
+      <div class="forms">
         <div class="wrapper">
-          <h2>Search for a restaurant, postcode or area</h2>
-          <input placeholder="Gourmet Burger, SW22"></input>
-          <button>Find restaurants</button>
+          <div class="form-group">
+            <label>Name</label>
+            <input></input>
+          </div>
+          <div class="form-group">
+            <label>Phone</label>
+            <input></input>
+          </div>
+          <div class="form-group">
+            <button>Continue to payment</button>
+          </div>
         </div>
       </div>
 
@@ -29,11 +37,19 @@
         <h2 class="heading-medium">Code snippet</h2>
 
         <textarea rows="8">
-          <div class="search">
+          <div class="forms">
             <div class="wrapper">
-              <h2>Search for a restaurant, postcode or area</h2>
-              <input placeholder="Gourmet Burger, SW22"></input>
-              <button>Find restaurants</button>
+              <div class="form-group">
+                <label>Name</label>
+                <input></input>
+              </div>
+              <div class="form-group">
+                <label>Phone</label>
+                <input></input>
+              </div>
+              <div class="form-group">
+                <button>Continue to payment</button>
+              </div>
             </div>
           </div>
         </textarea>
