--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -6,10 +6,6 @@
 
 {% block content %}
 
-<style>
-
-</style>
-
 <main id="content" role="main">
   <div class="grid-row">
     <div class="column-full">
@@ -19,7 +15,7 @@
       </h1>
 
       <div class="JE-footer">
-        <div class="containter">
+        <div class="container">
           <div class="col-4">
             <h4>Customer Service</h4>
             <ul>
@@ -82,7 +78,7 @@
 
         <textarea rows="8">
           <div class="JE-footer">
-            <div class="containter">
+            <div class="container">
               <div class="col-4">
                 <h4>Customer Service</h4>
                 <ul>
