--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,6 +10,11 @@
   <div class="grid-row">
     <div class="column-two-thirds">
 
+      <h1 class="heading-xlarge">Just Eat prototype kit</h1>
+      <p class="lede">
+        This is a WIP of the Just Eat prototyping kit. From here you can grab small snippets of code and make your own working prototypes.
+      </p>
+
       <h2 class="heading-medium">Elements</h2>
 
 			<ul class="list list-bullet">
@@ -20,6 +25,7 @@
         <li><a href="search">Search module</a></li>
         <li><a href="forms">Forms</a></li>
         <li><a href="tabs">Tabs</a></li>
+        <li><a href="serp">SERP</a></li>
 			</ul>
 
       <a href="example">Example page</a>
