--- a/app/views/example.html
+++ b/app/views/example.html
@@ -6,9 +6,6 @@
 
 {% block content %}
 
-<style>
-</style>
-
   <div class="breadcrumb">
         <ul>
           <li><a href="#">Home</a></li>
@@ -19,7 +16,7 @@
       </div>
 
   <div class="JE-heroimage">
-    <h1>Find your flavor</h1>
+    <h1>Find your flavour</h1>
     <h2>Order takeaway online from over 27,000 restaurant.</h2>
     <div class="search">
       <div class="wrapper">
@@ -30,23 +27,58 @@
     </div>
   </div>
 
-  <main id="content" role="main">
-    <div class="forms">
-      <div class="wrapper">
-        <div class="form-group">
-          <label>Name</label>
-          <input></input>
+  <div class="serp">
+    <div class="wrapper">
+      <div class="card">
+        <div class="rest-logo"></div>
+          <div class="content">
+            <h3><a href="#">Hello Boss Kebab</a></h3>
+            <p>SE23 1.4 miles</p>
+            <p>Kebab</p>
+            <div class="rating"></div>
+          </div>
         </div>
-        <div class="form-group">
-          <label>Phone</label>
-          <input></input>
+
+      <div class="card">
+        <div class="rest-logo"></div>
+          <div class="content">
+            <h3><a href="#">Hello Boss Kebab</a></h3>
+            <p>SE23 1.4 miles</p>
+            <p>Kebab</p>
+            <div class="rating"></div>
+          </div>
+      </div>
+
+      <div class="card">
+        <div class="rest-logo"></div>
+          <div class="content">
+            <h3><a href="#">Hello Boss Kebab</a></h3>
+            <p>SE23 1.4 miles</p>
+            <p>Kebab</p>
+            <div class="rating"></div>
+          </div>
         </div>
-        <div class="form-group">
-          <button>Continue to payment</button>
-        </div>
+
+    </div>
+  </div>
+
+
+  <div class="forms">
+    <div class="wrapper">
+      <div class="form-group">
+        <label>Name</label>
+        <input></input>
+      </div>
+      <div class="form-group">
+        <label>Phone</label>
+        <input></input>
+      </div>
+      <div class="form-group">
+        <button>Continue to payment</button>
       </div>
     </div>
-  </main>
+  </div>
+
 
   <div class="JE-footer">
         <div class="container">
