--- a/app/views/heroimage.html
+++ b/app/views/heroimage.html
@@ -6,9 +6,6 @@
 
 {% block content %}
 
-<style>
-</style>
-
 <main id="content" role="main">
   <div class="grid-row">
     <div class="column-full">
@@ -18,7 +15,7 @@
       </h1>
 
       <div class="JE-heroimage">
-        <h1>Find your flavor</h1>
+        <h1>Find your flavour</h1>
         <h2>Order takeaway online from over 27,000 restaurant.</h2>
       </div>
 
@@ -27,7 +24,7 @@
 
         <textarea rows="8">
           <div class="JE-heroimage">
-            <h1>Find your flavor</h1>
+            <h1>Find your flavour</h1>
             <h2>Order takeaway online from over 27,000 restaurant.</h2>
           </div>
         </textarea>
