--- a/app/views/serp.html
+++ b/app/views/serp.html
@@ -64,8 +64,28 @@
                     <div class="rating"></div>
                   </div>
                 </div>
+
+              <div class="card">
+                <div class="rest-logo"></div>
+                  <div class="content">
+                    <h3><a href="#">Hello Boss Kebab</a></h3>
+                    <p>SE23 1.4 miles</p>
+                    <p>Kebab</p>
+                    <div class="rating"></div>
+                  </div>
               </div>
+
+              <div class="card">
+                <div class="rest-logo"></div>
+                  <div class="content">
+                    <h3><a href="#">Hello Boss Kebab</a></h3>
+                    <p>SE23 1.4 miles</p>
+                    <p>Kebab</p>
+                    <div class="rating"></div>
+                  </div>
+                </div>
             </div>
+          </div>
         </textarea>
       </div>
 
